add logger, csprojparser,config

--- a/CleanNugetSharp/App.config
+++ b/CleanNugetSharp/App.config
@@ -1,6 +1,82 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler"/>
+    <section name = "CsprojConfig" type = "CleanNugetSharp.ConfigSectionHandler,CleanNugetSharp" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+
+  <CsprojConfig>
+    <referencesExcludes>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\AjaxMin.4.84.4790.14417\lib\net40\AjaxMin.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.2.4.0\lib\net40-client\Cassette.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.Views.2.4.0\lib\net40\Cassette.Views.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Plex.Platform.NScale.Countries.1.0.1\lib\net45\Plex.Platform.NScale.Countries.dll</referencesExclude>
+    </referencesExcludes>
+    <datasourcePackagesRegexSearchPattern>..\\lib\\(.*?).dll</datasourcePackagesRegexSearchPattern>
+    <otherPackagesRegexSearchPattern>..\\packages\\(.*?).(\d.*?)\\</otherPackagesRegexSearchPattern>
+    <pathes>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Accounting.Web\src\Cloud.UI.Accounting\Cloud.UI.Accounting.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.AutomatedTesting.Web\src\Cloud.UI.AutomatedTesting\Cloud.UI.AutomatedTesting.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.AutomatedTesting.Web\src\Cloud.UI.AutomatedTesting\precompiledOutput\Cloud.UI.AutomatedTesting.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.BusinessIntelligence.VisionPlex.Web\src\Cloud.UI.BusinessIntelligence.VisionPlex.Tests\Cloud.UI.BusinessIntelligence.VisionPlex.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.BusinessIntelligence.VisionPlex.Web\src\Cloud.UI.BusinessIntelligence.VisionPlex\Cloud.UI.BusinessIntelligence.VisionPlex.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\Cloud.Data.BusinessIntelligence.VisionPlexBridge\Cloud.Data.BusinessIntelligence.VisionPlexBridge.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\Cloud.UI.BusinessIntelligence.VisionPlexBridge\Cloud.UI.BusinessIntelligence.VisionPlexBridge.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\Cloud.Web.BusinessIntelligence.VisionPlexBridge\Cloud.Web.BusinessIntelligence.VisionPlexBridge.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Communication.Web\src\Cloud.UI.Communication\Cloud.UI.Communication.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Costing.Web\src\Cloud.UI.Costing\Cloud.UI.Costing.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.EDI.Web\src\Cloud.UI.EDI\Cloud.UI.EDI.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Engineering.Web\src\Cloud.UI.Engineering\Cloud.UI.Engineering.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.HumanResources.Web\src\Cloud.UI.HumanResources\Cloud.UI.HumanResources.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Inventory.Web\src\Cloud.UI.Inventory\Cloud.UI.Inventory.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Maintenance.Web\src\Cloud.UI.Maintenance\Cloud.UI.Maintenance.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Management.Web\src\Cloud.UI.Management\Cloud.UI.Management.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Materials.Web\src\Cloud.UI.Materials\Cloud.UI.Materials.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Platform.Web\src\Cloud.UI.Platform.Tests\Cloud.UI.Platform.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Platform.Web\src\Cloud.UI.Platform\Cloud.UI.Platform.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ProductionTracking.ControlPanel.Web\src\Cloud.Core.ProductionTracking.ControlPanel.Tests\Cloud.Core.ProductionTracking.ControlPanel.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ProductionTracking.ControlPanel.Web\src\Cloud.Core.ProductionTracking.ControlPanel\Cloud.Core.ProductionTracking.ControlPanel.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ProductionTracking.ControlPanel.Web\src\Cloud.UI.ProductionTracking.ControlPanel\Cloud.UI.ProductionTracking.ControlPanel.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ProductionTracking.Web\src\Cloud.UI.ProductionTracking\Cloud.UI.ProductionTracking.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ProgramManagement.Web\src\Cloud.UI.ProgramManagement\Cloud.UI.ProgramManagement.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Purchasing.Web\src\Cloud.UI.Purchasing\Cloud.UI.Purchasing.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Quality.Web\src\Cloud.UI.Quality\Cloud.UI.Quality.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.SalesAndCRM.Web\src\Cloud.UI.SalesAndCRM\Cloud.UI.SalesAndCRM.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Scheduling.Web\src\Cloud.UI.Scheduling\Cloud.UI.Scheduling.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Security.Web\src\Cloud.UI.Security.Tests\Cloud.UI.Security.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Security.Web\src\Cloud.UI.Security\Cloud.UI.Security.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Shipping.Web\src\Cloud.UI.Shipping\Cloud.UI.Shipping.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.Shipping.Web\src\Cloud.UI.Shipping\precompiledOutput\Cloud.UI.Shipping.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Apps.ToolTracking.Web\src\Cloud.UI.ToolTracking\Cloud.UI.ToolTracking.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.Api.Web\src\Cloud.Api.Tests\Cloud.Api.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.Api.Web\src\Cloud.Api\Cloud.Api.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.CDN.Web\src\Cloud.CDN.Tests\Cloud.CDN.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.CDN.Web\src\Cloud.CDN\Cloud.CDN.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.UI.Web\src\Cloud.UI.Tests\Cloud.UI.Tests.csproj</path>
+      <path>d:\Dev\Git\CA\Cloud.Sites.UI.Web\src\Cloud.UI\Cloud.UI.csproj</path>
+    </pathes>
+  </CsprojConfig>
+
+
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logs\myservice\log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %date - %message%newline%exception" />
+      </layout>
+    </appender>
+
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+  </log4net>
 </configuration>
