--- a/CleanNugetSharp/packages.config
+++ b/CleanNugetSharp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="NuGet.Core" version="2.9.0" targetFramework="net45" />
 </packages>
