added public url config and regex pattern config

--- a/CleanNugetSharp/App.config
+++ b/CleanNugetSharp/App.config
@@ -17,6 +17,11 @@
     </referencesExcludes>
     <datasourcePackagesRegexSearchPattern>..\\lib\\(.*?).dll</datasourcePackagesRegexSearchPattern>
     <otherPackagesRegexSearchPattern>..\\packages\\(.*?).(\d.*?)\\</otherPackagesRegexSearchPattern>
+
+    <publicRepositories>
+      <publicRepository>https://www.nuget.org/api/v2/</publicRepository>
+      <publicRepository>https://packages.plex.com/nuget</publicRepository>
+    </publicRepositories>
     <pathes>
       <path>d:\Dev\Git\CA\Cloud.Apps.Accounting.Web\src\Cloud.UI.Accounting\Cloud.UI.Accounting.csproj</path>
       <path>d:\Dev\Git\CA\Cloud.Apps.AutomatedTesting.Web\src\Cloud.UI.AutomatedTesting\Cloud.UI.AutomatedTesting.csproj</path>
