--- a/CleanNugetSharp/App.config
+++ b/CleanNugetSharp/App.config
@@ -9,15 +9,17 @@
   </startup>
 
   <CsprojConfig>
-    <referencesExcludes>
-      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\AjaxMin.4.84.4790.14417\lib\net40\AjaxMin.dll</referencesExclude>
-      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.2.4.0\lib\net40-client\Cassette.dll</referencesExclude>
-      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.Views.2.4.0\lib\net40\Cassette.Views.dll</referencesExclude>
-      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Plex.Platform.NScale.Countries.1.0.1\lib\net45\Plex.Platform.NScale.Countries.dll</referencesExclude>
-    </referencesExcludes>
+    <!--can be overwritten by params-->
     <datasourcePackagesRegexSearchPattern>..\\lib\\(.*?).dll</datasourcePackagesRegexSearchPattern>
     <otherPackagesRegexSearchPattern>..\\packages\\(.*?).(\d.*?)\\</otherPackagesRegexSearchPattern>
-
+    <csprojNamespace>http://schemas.microsoft.com/developer/msbuild/2003</csprojNamespace>
+    <countOfPreviousVersionsToStore>3</countOfPreviousVersionsToStore>
+    <nugetServerUrl>http://localhost:5555</nugetServerUrl>
+    <packageBackupfolder>d:\temp\test</packageBackupfolder>
+    <dataSourceDefaultVersion>1.0.0.0</dataSourceDefaultVersion>
+    <datasourcePackageAddString>.Dev</datasourcePackageAddString>
+    <whatif>true</whatif>
+    <!--cannot be overwritten by params-->
     <publicRepositories>
       <publicRepository>https://www.nuget.org/api/v2/</publicRepository>
       <publicRepository>https://packages.plex.com/nuget</publicRepository>
@@ -63,6 +65,12 @@
       <path>d:\Dev\Git\CA\Cloud.Sites.UI.Web\src\Cloud.UI.Tests\Cloud.UI.Tests.csproj</path>
       <path>d:\Dev\Git\CA\Cloud.Sites.UI.Web\src\Cloud.UI\Cloud.UI.csproj</path>
     </pathes>
+    <referencesExcludes>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\AjaxMin.4.84.4790.14417\lib\net40\AjaxMin.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.2.4.0\lib\net40-client\Cassette.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Cassette.Views.2.4.0\lib\net40\Cassette.Views.dll</referencesExclude>
+      <referencesExclude>..\..\..\..\..\Dev\Git\Cloud-Applications\Cloud.Apps.BusinessIntelligence.VP.Bridge.Web\src\packages\Plex.Platform.NScale.Countries.1.0.1\lib\net45\Plex.Platform.NScale.Countries.dll</referencesExclude>
+    </referencesExcludes>
   </CsprojConfig>
 
 
